--- a/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
@@ -1,12 +1,12 @@
-<material-dialog id="crop-poster-modal">
-    <material-toolbar layout="horizontal" layout-align="">
+<md-dialog id="crop-poster-modal">
+    <md-toolbar layout="horizontal" layout-align="">
         <div layout layout-align="start center">
             <span flex>Your profile page</span>
-            <material-button class="material-button-fab" ng-click="cancel()">
+            <md-button class="md-button-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
-            </material-button>
+            </md-button>
         </div>
-    </material-toolbar>
+    </md-toolbar>
     <image-crop
             data-width="300"
             data-height="300"
@@ -15,4 +15,4 @@
             data-result="imageCropResult"
             ></image-crop>
 
-</material-dialog>
+</md-dialog>
