--- a/client/app/modules/challenge/templates/challenges-list.tpl.html
+++ b/client/app/modules/challenge/templates/challenges-list.tpl.html
@@ -1,16 +1,16 @@
-<material-content layout="vertical" scroller loading-method="loadMoreChallenges()" style="overflow-x:hidden;">
+<md-content layout="vertical" scroller loading-method="loadMoreChallenges()" style="overflow-x:hidden;">
     <div ng-show="challenges.length == 0">
         Nothing to show yet... 
     </div>
-    <material-list ng-show="challenges.length > 0">
-        <material-item ng-repeat="challenge in challenges" class="item-list">
-            <material-item-content>
-                <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
+    <md-list ng-show="challenges.length > 0">
+        <md-item ng-repeat="challenge in challenges" class="item-list">
+            <md-item-content>
+                <div class="md-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
                     <a ui-sref="challenge({ cid : challenge.accessUrl })">
                         <img ng-src="{{ challenge.poster || '/images/placeholder90x90.png' }}" class="" width="100%" alt="challenge's poster" />
                     </a>
                 </div>
-                <article class="material-tile-content">
+                <article class="md-tile-content">
                     <a ui-sref="challenge({ cid : challenge.accessUrl })">
                         <h1>{{ challenge.title }}</h1>
                     </a>
@@ -43,14 +43,14 @@
                                 </p>
                             </div>
                         </div>
-                        <material-button ng-click="showProjects(challenge._id,$index)" >
+                        <md-button ng-click="showProjects(challenge._id,$index)" >
                             show related projects
-                        </material-button>
+                        </md-button>
                     </div>
 
 
                 </article>
-            </material-item-content>
-        </material-item>
-    </material-list>
-</material-content>
+            </md-item-content>
+        </md-item>
+    </md-list>
+</md-content>
