--- a/client/app/modules/footer/templates/footer.tpl.html
+++ b/client/app/modules/footer/templates/footer.tpl.html
@@ -1,8 +1,8 @@
 <footer class="center main-footer" layout="vertical">
     <div layout="horizontal" layout-align="center center">
-        <material-button ui-sref="about">{{'FOOTER_ABOUT'|translate}}</material-button>
-        <material-button ui-sref="contact">{{'FOOTER_CONTACT'|translate}}</material-button>
-        <material-button ui-sref="term">{{'FOOTER_TERM'|translate}}</material-button>
+        <md-button ui-sref="about">{{'FOOTER_ABOUT'|translate}}</md-button>
+        <md-button ui-sref="contact">{{'FOOTER_CONTACT'|translate}}</md-button>
+        <md-button ui-sref="term">{{'FOOTER_TERM'|translate}}</md-button>
     </div>
     <div class="text-muted center"> © {{'TITLE'|translate}} 2014</div>
 </footer>
