--- a/client/app/modules/notification/templates/toast.tpl.html
+++ b/client/app/modules/notification/templates/toast.tpl.html
@@ -1,6 +1,6 @@
-<material-toast>
+<md-toast>
     <span flex>{{message}}</span>
-    <material-button ng-click="closeToast()">
+    <md-button ng-click="closeToast()">
         Close
-    </material-button>
-</material-toast>
+    </md-button>
+</md-toast>
