--- a/client/app/modules/profile/templates/feed.tpl.html
+++ b/client/app/modules/profile/templates/feed.tpl.html
@@ -1,8 +1,8 @@
 <section layout="vertical" layout-fill>
-    <material-toolbar scroll-shrink class="material-theme-green" style="position:relative;">
+    <md-toolbar scroll-shrink class="md-theme-green" style="position:relative;">
         <h1>Notifications</h1>
-    </material-toolbar>
-    <material-content flex>
+    </md-toolbar>
+    <md-content flex>
         <notification-list notifications="notifications"></notification-list>
-    </material-content>
+    </md-content>
 </section>
