--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -5,8 +5,8 @@
     </section>
     <div class="row center" style="margin-top: 60px;padding-bottom: 30px;">
         <div class="btn-group">
-            <material-button class="material-button-colored" ng-click="openApplyModal()" ng-if="!isOwner && !isMember">Join Project</material-button>
-            <material-button class="material-button-colored" ng-click="openShare()">Promote Project</material-button>
+            <md-button class="md-button-colored" ng-click="openApplyModal()" ng-if="!isOwner && !isMember">Join Project</md-button>
+            <md-button class="md-button-colored" ng-click="openShare()">Promote Project</md-button>
         </div>
     </div>
 
