--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
@@ -1,12 +1,12 @@
-<material-dialog id="edit-banner-dialog">
-    <material-toolbar layout="horizontal" layout-align="">
+<md-dialog id="edit-banner-dialog">
+    <md-toolbar layout="horizontal" layout-align="">
         <div layout layout-align="start center">
             <div flex>Pick a banner</div>
-            <material-button class="material-button-fab" ng-click="cancel()">
+            <md-button class="md-button-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
-            </material-button>
+            </md-button>
         </div>
-    </material-toolbar>
+    </md-toolbar>
     <image-crop
             data-width="900"
             data-height="300"
@@ -24,4 +24,4 @@
             data-result="imageCropResult"
             hide-md
             ></image-crop>
-</material-dialog>
+</md-dialog>
