--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -1,12 +1,12 @@
-<material-dialog id="edit-poster-dialog">
-    <material-toolbar layout="horizontal">
+<md-dialog id="edit-poster-dialog">
+    <md-toolbar layout="horizontal">
         <div layout layout-align="start center">
             <div flex>Pick a poster image</div>
-            <material-button class="material-button-fab"  ng-click="cancel()">
+            <md-button class="md-button-fab"  ng-click="cancel()">
                 <i class="fa fa-times"></i>
-            </material-button>
+            </md-button>
         </div>
-    </material-toolbar>
+    </md-toolbar>
     <image-crop
             data-width="300"
             data-height="300"
@@ -15,4 +15,4 @@
             data-result="imageCropResult"
             ></image-crop>
 
-</material-dialog>
+</md-dialog>
