--- a/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
@@ -1,33 +1,33 @@
-<material-dialog>
+<md-dialog>
     <form name="removeChallengeForm">
-        <material-toolbar layout="horizontal" layout-align="">
+        <md-toolbar layout="horizontal" layout-align="">
             <div layout layout-align="start center">
                 <div  flex class="center">
                     <i class="fa fa-warning">Warning</i>
                 </div>
-                <material-button class="material-button-fab material-theme-red" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
+                <md-button class="md-button-fab md-theme-red" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
                     <i class="fa fa-ban"></i>
-                </material-button>
-                <material-button class="material-button-fab" ng-click="cancel()">
+                </md-button>
+                <md-button class="md-button-fab" ng-click="cancel()">
                     <i class="fa fa-times"></i>
-                </material-button>
+                </md-button>
             </div>
-        </material-toolbar>
-        <material-content>
+        </md-toolbar>
+        <md-content>
             <div>
                 <p>By clicking the confirm button above, you will delete your challenge. There is no way to recover the data associated with it.</p>
 
                 <p>If you are sure, please type in the name of your challenge below and then click the confirm button</p>
             </div>
-                <material-input-group>
+                <md-input-group>
                     <label for="titleR">Name of your challenge</label>
-                    <material-input type="text" ng-model="challengeTest.title" id="titleR" name="title" ng-pattern="challengeTitle" required></material-input>
-                </material-input-group>
+                    <md-input type="text" ng-model="challengeTest.title" id="titleR" name="title" ng-pattern="challengeTitle" required></md-input>
+                </md-input-group>
                 <div ng-messages="removeChallengeForm.title.$error" ng-if="!removeChallengeForm.title.$pristine">
                     <div ng-message="pattern">
                         This is not the name of your challenge.
                     </div>
                 </div>
-        </material-content>
+        </md-content>
     </form>
-</material-dialog>
+</md-dialog>
