--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -1,28 +1,28 @@
-<material-content layout="horizontal" layout-fill>
-    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left">
-        <material-content style="padding-left: 20px;" layout="vertical" >
-            <material-toolbar layout="horizontal">
-                <div class="material-toolbar-tools">
+<md-content layout="horizontal" layout-fill>
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2 left" component-id="left">
+        <md-content style="padding-left: 20px;" layout="vertical" >
+            <md-toolbar layout="horizontal">
+                <div class="md-toolbar-tools">
                     <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
                     <div>
                         <i class="fa fa-user">Edit your project</i>
                     </div>
                 </div>
-            </material-toolbar>
-            <material-button ng-click="popUpEdit()">
+            </md-toolbar>
+            <md-button ng-click="popUpEdit()">
                 Edit Home Page
-            </material-button>
-            <material-button ng-click="popUpPoster()">
+            </md-button>
+            <md-button ng-click="popUpPoster()">
                 Edit Poster
-            </material-button>
-            <material-button ng-click="popUpBanner()">
+            </md-button>
+            <md-button ng-click="popUpBanner()">
                 Edit Banner
-            </material-button>
-            <material-button class="material-theme-red" ng-click="popUpRemove()">
+            </md-button>
+            <md-button class="md-theme-red" ng-click="popUpRemove()">
                 Delete
-            </material-button>
-        </material-content>
-    </material-sidenav>
+            </md-button>
+        </md-content>
+    </md-sidenav>
     <form name="projectBasic" layout="vertical" flex class="right-part">
         <ui-select ng-model="project.localisation"
                    theme="selectize"
@@ -35,10 +35,10 @@
             </ui-select-choices>
         </ui-select>
         <tag-manager entity="project" ng-model="project.tags"></tag-manager>
-        <material-input-group>
+        <md-input-group>
             <label for="title">Title</label>
-            <material-input id="title" type="text" ng-model="project.title" name="title"/>
-        </material-input-group>
+            <md-input id="title" type="text" ng-model="project.title" name="title"/>
+        </md-input-group>
         <div ng-messages="projectBasic.title.$error">
             <div ng-message="required">
                 title is required
@@ -46,10 +46,10 @@
         </div>
         <label for="brief"></label>
         <textarea  id="brief" rows="5" style="width:100%;" ng-model="project.brief"></textarea>
-        <material-input-group >
+        <md-input-group >
             <label for="trello">Trello Id (like <code>U0aBsIQl</code>)</label>
-            <material-input id="trello" type="text"ng-model="project.trello" />
-        </material-input-group>
-        <material-button flex class="material-button-raised material-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</material-button>
+            <md-input id="trello" type="text"ng-model="project.trello" />
+        </md-input-group>
+        <md-button flex class="md-button-raised md-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</md-button>
     </form>
-</material-content>
+</md-content>
