--- a/client/app/modules/auth/templates/signup.tpl.html
+++ b/client/app/modules/auth/templates/signup.tpl.html
@@ -3,38 +3,38 @@
         <div class="center">
             <img src="images/svg/Joinus.svg" alt="Join Us"/>
         </div>
-        <material-input-group>
+        <md-input-group>
             <label for="username">Username</label>
-            <material-input id="username" type="text" ng-model="signup.username" required name="username"/>
-        </material-input-group>
+            <md-input id="username" type="text" ng-model="signup.username" required name="username"/>
+        </md-input-group>
         <div ng-messages="signupForm.username.$error" ng-if="!signupForm.username.$pristine">
             <div ng-message="required" class="form-message">
                 username is required
             </div>
         </div>
-        <material-input-group>
+        <md-input-group>
             <label for="emailS">Email</label>
-            <material-input id="emailS" type="text" ng-model="signup.email" required name="email"/>
-        </material-input-group>
+            <md-input id="emailS" type="text" ng-model="signup.email" required name="email"/>
+        </md-input-group>
         <div ng-messages="signupForm.email.$error" ng-if="!signupForm.email.$pristine">
             <div ng-message="required" class="form-message">
                 email is required
             </div>
         </div>
         <tag-manager entity="signup"></tag-manager>
-        <material-input-group>
+        <md-input-group>
             <label for="passwordR">Password</label>
-            <material-input id="passwordR" type="password" ng-model="signup.password" required name="password"/>
-        </material-input-group>
+            <md-input id="passwordR" type="password" ng-model="signup.password" required name="password"/>
+        </md-input-group>
         <div ng-messages="signupForm.password.$error" ng-if="!signupForm.password.$pristine">
             <div ng-message="required" class="form-message">
                 password is required
             </div>
         </div>
-        <material-input-group >
+        <md-input-group >
             <label for="passwordCheck">Repeat your password</label>
-            <material-input id="passwordCheck" type="password" ng-model="check.password" required name="passwordR"/>
-        </material-input-group>
+            <md-input id="passwordCheck" type="password" ng-model="check.password" required name="passwordR"/>
+        </md-input-group>
         <div ng-messages="signupForm.passwordR.$error" ng-if="!signupForm.passwordR.$pristine">
             <div ng-message="required" class="form-message">
                 password is required
@@ -54,6 +54,6 @@
         </div>
         <div ng-messages="signupForm.read.$error" ng-if="!signupForm.passwordR.$pristine">
         </div>
-        <material-button style="width:100%;" class="material-button-raised" type="submit" ng-disabled="signupForm.$invalid">Register</material-button>
+        <md-button style="width:100%;" class="md-button-raised" type="submit" ng-disabled="signupForm.$invalid">Register</md-button>
     </form>
 </section>
