--- a/client/app/modules/common/sass/material-redesign.scss
+++ b/client/app/modules/common/sass/material-redesign.scss
@@ -1,50 +1,50 @@
-$material-tab-color : #313131;
-$material-tab-color-active : black;
-$material-tab-color-disabled : #808080;
-$material-tab-background : #ffffff;
-$material-tab-background-disabled : #c1c1c1;
-$material-card-background : rgb(253, 255, 248);
+$md-tab-color : #313131;
+$md-tab-color-active : black;
+$md-tab-color-disabled : #808080;
+$md-tab-background : #ffffff;
+$md-tab-background-disabled : #c1c1c1;
+$md-card-background : rgb(253, 255, 248);
 
 $headerHeight : 64px;
 
-.material-theme-black{
+.md-theme-black{
   background-color: #000000;
   color : #f5f5f5;
 }
 
-.material-dialog-container{
+.md-dialog-container{
   overflow-y: hidden;
 }
 
-material-content{
+md-content{
   padding : 0px ;
 
 }
 
-.material-content{
+.md-content{
   height:100%;
   padding-top : $headerHeight;
 }
 
-material-tabs{
+md-tabs{
   padding-left: 0px !important;
   width:100%;
 }
 
-material-tab material-tab-label{
-  color : $material-tab-color;
-  background-color: $material-tab-background;
+md-tab md-tab-label{
+  color : $md-tab-color;
+  background-color: $md-tab-background;
   &.active {
-    color: $material-tab-color-active;
+    color: $md-tab-color-active;
   }
   &.disabled {
-    color: $material-tab-color-disabled;
-    background-color : $material-tab-background-disabled
+    color: $md-tab-color-disabled;
+    background-color : $md-tab-background-disabled
   }
 }
 
 .tabs-header{
-  background-color: $material-tab-background;
+  background-color: $md-tab-background;
 }
 
 .tab-paginator{
@@ -52,13 +52,13 @@ material-tab material-tab-label{
   background-color: darkgray;
 }
 
-.material-theme-white{
+.md-theme-white{
   color : black !important;
   background-color: white !important;
 }
 
-material-card{
-  background-color: $material-card-background;
+md-card{
+  background-color: $md-card-background;
   //  height: 400px;
   font-size : 0.8em;
   word-wrap: break-word;
@@ -73,29 +73,29 @@ material-card{
 }
 
 
-material-toast{
+md-toast{
   min-height : $headerHeight !important;
   z-index:100;
 }
 
 
-material-whiteframe{
-  background-color: $material-card-background !important;
+md-whiteframe{
+  background-color: $md-card-background !important;
 }
 
 
-material-ink-bar{
+md-ink-bar{
   background-color: #5f9ea0!important;
   height:4px!important;
 }
 
-material-dialog{
+md-dialog{
 //  width:90%;
 //  height : 300px;
-  material-toolbar{
+  md-toolbar{
     border-bottom:solid 1px black;
   }
-  material-content{
+  md-content{
     padding-left : 15px;
     padding-bottom: 10px;
     padding-top: 10px;
@@ -103,7 +103,7 @@ material-dialog{
 }
 
 
-.material-button-fab{
+.md-button-fab{
 
   .fa{
     margin: auto auto;
@@ -112,12 +112,12 @@ material-dialog{
 }
 
 
-.material-sidenav-right.open,.material-sidenav-left.open{
+.md-sidenav-right.open,.md-sidenav-left.open{
   z-index:25 !important;
 }
 
-.material-sidenav-left{
-  material-button{
+.md-sidenav-left{
+  md-button{
     i{
       display: inline-block;
       width: 100%;
@@ -126,12 +126,12 @@ material-dialog{
   }
 }
 //@media (min-width: 960px) {
-//  material-sidenav {
+//  md-sidenav {
 //    position: absolute !important;
 //    -webkit-transition: all 0.3s ease-in-out !important;
 //    transition: all 0.3s ease-in-out !important;
 //  }
-//  .material-sidenav-backdrop {
+//  .md-sidenav-backdrop {
 //    display: block !important;
 //  }
 //}
