--- a/client/app/modules/header/sass/header.scss
+++ b/client/app/modules/header/sass/header.scss
@@ -16,7 +16,7 @@
 }
 
 .profile-menu{
-  material-button{
+  md-button{
     width:100%;
     margin-left : 10px;
     text-align : right;
@@ -36,7 +36,7 @@
 .menu {
   padding: 10px;
   
-  material-button {
+  md-button {
     width: 100%;
     margin-left: 10px;
     text-align: right;
