--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -8,29 +8,29 @@
     </h2>
 
     <div class="menu">
-        <!--<material-button ui-sref="admin"  ng-class="{'material-theme-red':$uiRoute}" ui-route="/admin">-->
+        <!--<md-button ui-sref="admin"  ng-class="{'md-theme-red':$uiRoute}" ui-route="/admin">-->
             <!--Admin-->
-        <!--</material-button>-->
-        <material-button ui-sref="profile({uid : currentUser._id})"  ng-class="{'material-theme-green':$uiRoute}" ui-route="/profile/{{currentUser._id}}">
+        <!--</md-button>-->
+        <md-button ui-sref="profile({uid : currentUser._id})"  ng-class="{'md-theme-green':$uiRoute}" ui-route="/profile/{{currentUser._id}}">
             Profile
-        </material-button>
+        </md-button>
         <!--
-        <material-button ui-sref="message" ng-class="{'material-theme-orange':$uiRoute}" ui-route="/message">
+        <md-button ui-sref="message" ng-class="{'md-theme-orange':$uiRoute}" ui-route="/message">
             Messages
-        </material-button>
+        </md-button>
         -->
-        <material-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'material-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
+        <md-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'md-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
             Challenges
-        </material-button>
-        <material-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'material-theme-light':$uiRoute}" ui-route="/projects/all">
+        </md-button>
+        <md-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'md-theme-light':$uiRoute}" ui-route="/projects/all">
             Projects
-        </material-button>
-        <material-button ui-sref="profileAdmin({ uid : currentUser._id })"  ng-class="{'material-theme-green':$uiRoute}" ui-route="/admin/profile/{{ currentUser._id }}">
+        </md-button>
+        <md-button ui-sref="profileAdmin({ uid : currentUser._id })"  ng-class="{'md-theme-green':$uiRoute}" ui-route="/admin/profile/{{ currentUser._id }}">
             Edit Profile
-        </material-button>
+        </md-button>
     </div>
 
-    <material-button ng-click="signout()" layout layout-align="center center">
+    <md-button ng-click="signout()" layout layout-align="center center">
         <i class="fa fa-sign-out">Signout</i>
-    </material-button>
+    </md-button>
 </section>
