--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -23,11 +23,11 @@
 }
 
 // Put the dialog on top of everything else
-.material-dialog-container {
+.md-dialog-container {
 	z-index: 100;
 }
 
-material-dialog {
+md-dialog {
 	border-color: black;
 	border-width: 1px;
 	border-style: solid;
