--- a/client/app/modules/notification/templates/socketToast.tpl.html
+++ b/client/app/modules/notification/templates/socketToast.tpl.html
@@ -1,3 +1,3 @@
-<material-toast style="padding-left:0px;padding-right:0px;" >
+<md-toast style="padding-left:0px;padding-right:0px;" >
     <notification notification="notification">
-</material-toast>
+</md-toast>
