--- a/client/app/modules/project/templates/modal/shareModal.tpl.html
+++ b/client/app/modules/project/templates/modal/shareModal.tpl.html
@@ -1,18 +1,18 @@
-<material-dialog>
-    <material-toolbar layout="horizontal">
+<md-dialog>
+    <md-toolbar layout="horizontal">
         <div flex></div>
-        <material-button ng-click="cancel()" class="material-button-fab">
+        <md-button ng-click="cancel()" class="md-button-fab">
             <i class="fa fa-times"></i>
-        </material-button>
-    </material-toolbar>
-    <material-content>
+        </md-button>
+    </md-toolbar>
+    <md-content>
         <div>
             <span>
                 Share this Url with your friends :
             </span>
             <pre>http://ideaweave.io/project/{{ pid }}</pre>
         </div>
-    </material-content>
-</material-dialog>
+    </md-content>
+</md-dialog>
 
 
