--- a/client/app/modules/workspace/templates/files.tpl.html
+++ b/client/app/modules/workspace/templates/files.tpl.html
@@ -1,19 +1,19 @@
-<material-toolbar>
-    <material-button ng-click="uploadFileModal($event)" >
+<md-toolbar>
+    <md-button ng-click="uploadFileModal($event)" >
         <i class=" fa fa-upload">Upload</i>
-    </material-button>
-    <material-input-group >
+    </md-button>
+    <md-input-group >
         <label for="filter" class="fa fa-search">Filter by name</label>
-        <material-input type="text" ng-model="fileFilter.originalName" id="filter"/>
-    </material-input-group>
-</material-toolbar>
-<material-list class="list-resource">
-    <material-item ng-repeat="file in files | filter:fileFilter">
-        <div class="material-tile-content">
+        <md-input type="text" ng-model="fileFilter.originalName" id="filter"/>
+    </md-input-group>
+</md-toolbar>
+<md-list class="list-resource">
+    <md-item ng-repeat="file in files | filter:fileFilter">
+        <div class="md-tile-content">
             <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails(file)" ></i>
-            <material-button ng-click="detailsFileModal($event,file)">
+            <md-button ng-click="detailsFileModal($event,file)">
                 {{ file.originalName }}
-            </material-button>
+            </md-button>
         </div>
-    </material-item>
-</material-list>
+    </md-item>
+</md-list>
