--- a/client/app/modules/workspace/templates/modal/addNoteModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addNoteModal.tpl.html
@@ -1,27 +1,27 @@
-<material-dialog>
-    <material-toolbar>
+<md-dialog>
+    <md-toolbar>
         <div layout="horizontal" layout-align="start center">
             <div>
-                <material-checkbox ng-model="note.public" aria-label="Checkbox 1">
+                <md-checkbox ng-model="note.public" aria-label="Checkbox 1">
                     Public ?
-                </material-checkbox>
+                </md-checkbox>
             </div>
             <div flex class="center">
                 Note
             </div>
-            <material-button class="material-button-fab"  ng-click="createNote(note)" >
+            <md-button class="md-button-fab"  ng-click="createNote(note)" >
                 <i class="fa fa-check "></i>
-            </material-button>
-            <material-button ng-click="cancel()" block class="material-button-fab">
+            </md-button>
+            <md-button ng-click="cancel()" block class="md-button-fab">
                 <i class="fa fa-times" ></i>
-            </material-button>
-            <!--<material-button  style="font-size: 1.6em">-->
+            </md-button>
+            <!--<md-button  style="font-size: 1.6em">-->
                 <!--<i class="fa fa-check">Save</i>-->
-            <!--</material-button>-->
+            <!--</md-button>-->
             <!--<i class="fa fa-times fa-2x my-btn" ng-click="cancel()" block></i>-->
         </div>
-    </material-toolbar>
-    <material-content>
+    </md-toolbar>
+    <md-content>
         <form name="noteForm" layout="vertical">
             <ui-select ng-model="note.type" theme="selectize" style="width: 100%;">
                 <ui-select-match placeholder="Select the type of note you want write">
@@ -33,11 +33,11 @@
                     <span ng-bind-html="category.title | highlight: $select.search"></span>
                 </ui-select-choices>
             </ui-select>
-            <material-input-group>
+            <md-input-group>
                 <label for="title">Title</label>
-                <material-input id="title" type="text" ng-model="note.title" />
-            </material-input-group>
+                <md-input id="title" type="text" ng-model="note.title" />
+            </md-input-group>
             <textarea ui-tinymce="tinymceOptions" ng-model="note.text"></textarea>
         </form>
-    </material-content>
-</material-dialog>
+    </md-content>
+</md-dialog>
