--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -1,24 +1,24 @@
-<material-dialog>
-    <material-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
+<md-dialog>
+    <md-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
         <div layout="horizontal">
             <div flex></div>
             <div class="faa-spin animated" ng-if="isUploding">
                 <i class="fa fa-spinner fa-2x"></i>
             </div>
             <div  ng-if="file">
-                <material-button class="material-button-fab" ng-click="upload(file,file.description)">
+                <md-button class="md-button-fab" ng-click="upload(file,file.description)">
                     <i class="fa fa-cloud-upload"></i>
-                </material-button>
-                <material-button class="material-button-fab" ng-click="cancelUpload()">
+                </md-button>
+                <md-button class="md-button-fab" ng-click="cancelUpload()">
                     <i  class="fa fa-2x fa-ban"></i>
-                </material-button>
+                </md-button>
             </div>
-            <material-button class="material-button-fab" ng-click="cancel()">
+            <md-button class="md-button-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
-            </material-button>
+            </md-button>
         </div>
-    </material-toolbar>
-    <material-content>
+    </md-toolbar>
+    <md-content>
         <div class="dropbox"
              ng-file-drop="fileSelected($files)"
              ng-file-drag-over-class="dropbox-dragover"
@@ -27,9 +27,9 @@
                 <input ng-if="!file" type="file" ng-file-select="fileSelected($files)"/>
             </div>
         </div>
-        <material-input-group ng-if="file">
+        <md-input-group ng-if="file">
             <label for="fileDescription">file description...</label>
-            <material-input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
-        </material-input-group>
-    </material-content>
-</material-dialog>
+            <md-input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
+        </md-input-group>
+    </md-content>
+</md-dialog>
